# routes/api/auth.php
@@ -3,9 +3,14 @@
 declare(strict_types=1);
 
 use App\Http\Controllers\Auth\EmailVerificationNotificationController;
+use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\VerifyEmailController;
 use Illuminate\Support\Facades\Route;
+
+Route::post('/login', LoginController::class)
+    ->middleware('guest')
+    ->name('login');
 
 Route::post('/register', RegisterController::class)
     ->middleware(['guest'])
